# zwasm

./: .editorconfig  .envrc  .gitattributes  .gitignore  .gitmodules  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build.zig  build.zig.zon  flake.nix  install.sh
.claude/: CLAUDE.md  settings.json
.dev/: README.md  ROADMAP.md  adr0200_api_impl_map.md  bench-strategy.md  blocked_by_sweep_2026-05-21.md  c_api_instance_audit_2026-05-24.md  c_api_surface_audit_2026-06-04.md  checklist.md  component_model_plan.md  component_model_survey.md  cw_guest_setup.md  d477_findings.md  debt.md  debt.yaml  decisions-archive.md  decisions.md  environment.md  gate_consolidation_study.md  handover.md  jit-debugging.md  jit_call_indirect_subtype_prep.md  memo.md  next-session-agenda.md  optimisation_log.md  orbstack_setup.md  perf-gap-analysis.md  phase10_design_plan_ja.md  phase10_g_op_bundle_plan.md  phase10_prep.md  phase10_scope_reassessment.md  phase10_transition_gate.md  phase10_transition_gate_ja.md  phase10_zig_api_plan.md  phase13_capi_gap.md  phase8_transition_gate.md  phase9_13_0_close_plan.md  phase9_13_0_execution_plan.md  phase9_close_master.md  phase9_close_plan.md  phase9_completion_close_plan.md  (+31 more)
.githooks/: pre-commit  pre-push  pre_commit  pre_push
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  spec-sha  tool-versions
bench/: README.md  ci_compare.sh  record.sh  (+12 more)
test/component/wasip3/: Cargo.toml  cli-args.wasm  cli-clocks.json  cli-clocks.wasm  cli-env.wasm  cli-exit.wasm  cli-stderr.wasm  cli-stdin.wasm  cli-stdout.wasm
(+4941 files in other folders)
